packages/kyvernoPolicies/chart/tests/vpol/restrict-proc-mount-cel/kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-proc-mount-cel
policies:
- ../policy.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-proc-mount-cel
  resources:
  - badpod-container-unmasked
  - badpod-initcontainer-unmasked
  - badpod-ephemeral-unmasked
  result: fail
- isValidatingPolicy: true
  kind: Deployment
  policy: restrict-proc-mount-cel
  resources:
  - baddeployment-unmasked
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-proc-mount-cel
  resources:
  - goodpod-no-procmount
  - goodpod-default-procmount
  - goodpod-initcontainer-default
  result: pass
- isValidatingPolicy: true
  kind: Deployment
  policy: restrict-proc-mount-cel
  resources:
  - gooddeployment-no-procmount
  result: pass
